src/main/java/io/github/rosemoe/arcPreview/parser/AffParser.java
/*
 *     AffPreviewR - A 2D chart image generator for Arcaea with Skia backend
 *     Copyright (C) 2022  Rosemoe
 *
 *     This program is free software: you can redistribute it and/or modify
 *     it under the terms of the GNU General Public License as published by
 *     the Free Software Foundation, either version 3 of the License, or
 *     (at your option) any later version.
 *
 *     This program is distributed in the hope that it will be useful,
 *     but WITHOUT ANY WARRANTY; without even the implied warranty of
 *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *     GNU General Public License for more details.
 *
 *     You should have received a copy of the GNU General Public License
 *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

// Generated from C:/Users/20734/IdeaProjects/ImageGenerater/src/main/kotlin/io/github/rosemoe/arcPreview/parser\AffParser.g4 by ANTLR 4.10.1
package io.github.rosemoe.arcPreview.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AffParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ARC=1, ARCTAP=2, HOLD=3, SCENE_CTRL=4, CAMERA=5, TIMING=6, TIMING_GROUP=7, 
		BOOL_LITERAL=8, IDENTIFIER=9, LPAREN=10, RPAREN=11, LBRACE=12, RBRACE=13, 
		LBRACK=14, RBRACK=15, COMMA=16, SEMICOLON=17, MINUS=18, COLON=19, INTEGER_LITERAL=20, 
		FLOAT_LITERAL=21, WS=22;
	public static final int
		RULE_entry = 0, RULE_header = 1, RULE_headerLine = 2, RULE_statement = 3, 
		RULE_tapStatement = 4, RULE_holdStatement = 5, RULE_sceneCtrlStatement = 6, 
		RULE_cameraStatement = 7, RULE_timingStatement = 8, RULE_timingGroupStatement = 9, 
		RULE_timingGroupModifiers = 10, RULE_arcStatement = 11, RULE_arcTapTail = 12, 
		RULE_arcTap = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"entry", "header", "headerLine", "statement", "tapStatement", "holdStatement", 
			"sceneCtrlStatement", "cameraStatement", "timingStatement", "timingGroupStatement", 
			"timingGroupModifiers", "arcStatement", "arcTapTail", "arcTap"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'arc'", "'arctap'", "'hold'", "'scenecontrol'", "'camera'", "'timing'", 
			"'timinggroup'", null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"','", "';'", "'-'", "':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "ARC", "ARCTAP", "HOLD", "SCENE_CTRL", "CAMERA", "TIMING", "TIMING_GROUP", 
			"BOOL_LITERAL", "IDENTIFIER", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
			"LBRACK", "RBRACK", "COMMA", "SEMICOLON", "MINUS", "COLON", "INTEGER_LITERAL", 
			"FLOAT_LITERAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AffParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AffParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class EntryContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			header();
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ARC) | (1L << HOLD) | (1L << SCENE_CTRL) | (1L << CAMERA) | (1L << TIMING) | (1L << TIMING_GROUP) | (1L << LPAREN))) != 0)) {
				{
				{
				setState(29);
				statement();
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(AffParser.MINUS, 0); }
		public List<HeaderLineContext> headerLine() {
			return getRuleContexts(HeaderLineContext.class);
		}
		public HeaderLineContext headerLine(int i) {
			return getRuleContext(HeaderLineContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(35);
				headerLine();
				}
				}
				setState(40);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(41);
			match(MINUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderLineContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(AffParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(AffParser.COLON, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(AffParser.INTEGER_LITERAL, 0); }
		public TerminalNode FLOAT_LITERAL() { return getToken(AffParser.FLOAT_LITERAL, 0); }
		public HeaderLineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerLine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterHeaderLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitHeaderLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitHeaderLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderLineContext headerLine() throws RecognitionException {
		HeaderLineContext _localctx = new HeaderLineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_headerLine);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			match(IDENTIFIER);
			setState(44);
			match(COLON);
			setState(45);
			_la = _input.LA(1);
			if ( !(_la==INTEGER_LITERAL || _la==FLOAT_LITERAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public TapStatementContext tapStatement() {
			return getRuleContext(TapStatementContext.class,0);
		}
		public HoldStatementContext holdStatement() {
			return getRuleContext(HoldStatementContext.class,0);
		}
		public ArcStatementContext arcStatement() {
			return getRuleContext(ArcStatementContext.class,0);
		}
		public SceneCtrlStatementContext sceneCtrlStatement() {
			return getRuleContext(SceneCtrlStatementContext.class,0);
		}
		public CameraStatementContext cameraStatement() {
			return getRuleContext(CameraStatementContext.class,0);
		}
		public TimingStatementContext timingStatement() {
			return getRuleContext(TimingStatementContext.class,0);
		}
		public TimingGroupStatementContext timingGroupStatement() {
			return getRuleContext(TimingGroupStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				tapStatement();
				}
				break;
			case HOLD:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				holdStatement();
				}
				break;
			case ARC:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				arcStatement();
				}
				break;
			case SCENE_CTRL:
				enterOuterAlt(_localctx, 4);
				{
				setState(50);
				sceneCtrlStatement();
				}
				break;
			case CAMERA:
				enterOuterAlt(_localctx, 5);
				{
				setState(51);
				cameraStatement();
				}
				break;
			case TIMING:
				enterOuterAlt(_localctx, 6);
				{
				setState(52);
				timingStatement();
				}
				break;
			case TIMING_GROUP:
				enterOuterAlt(_localctx, 7);
				{
				setState(53);
				timingGroupStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TapStatementContext extends ParserRuleContext {
		public Token time;
		public Token track;
		public TerminalNode LPAREN() { return getToken(AffParser.LPAREN, 0); }
		public TerminalNode COMMA() { return getToken(AffParser.COMMA, 0); }
		public TerminalNode RPAREN() { return getToken(AffParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(AffParser.SEMICOLON, 0); }
		public List<TerminalNode> INTEGER_LITERAL() { return getTokens(AffParser.INTEGER_LITERAL); }
		public TerminalNode INTEGER_LITERAL(int i) {
			return getToken(AffParser.INTEGER_LITERAL, i);
		}
		public TapStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tapStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterTapStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitTapStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitTapStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TapStatementContext tapStatement() throws RecognitionException {
		TapStatementContext _localctx = new TapStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tapStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(LPAREN);
			setState(57);
			((TapStatementContext)_localctx).time = match(INTEGER_LITERAL);
			setState(58);
			match(COMMA);
			setState(59);
			((TapStatementContext)_localctx).track = match(INTEGER_LITERAL);
			setState(60);
			match(RPAREN);
			setState(61);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HoldStatementContext extends ParserRuleContext {
		public Token startTime;
		public Token endTime;
		public Token track;
		public TerminalNode HOLD() { return getToken(AffParser.HOLD, 0); }
		public TerminalNode LPAREN() { return getToken(AffParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AffParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AffParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(AffParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(AffParser.SEMICOLON, 0); }
		public List<TerminalNode> INTEGER_LITERAL() { return getTokens(AffParser.INTEGER_LITERAL); }
		public TerminalNode INTEGER_LITERAL(int i) {
			return getToken(AffParser.INTEGER_LITERAL, i);
		}
		public HoldStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_holdStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterHoldStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitHoldStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitHoldStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HoldStatementContext holdStatement() throws RecognitionException {
		HoldStatementContext _localctx = new HoldStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_holdStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(HOLD);
			setState(64);
			match(LPAREN);
			setState(65);
			((HoldStatementContext)_localctx).startTime = match(INTEGER_LITERAL);
			setState(66);
			match(COMMA);
			setState(67);
			((HoldStatementContext)_localctx).endTime = match(INTEGER_LITERAL);
			setState(68);
			match(COMMA);
			setState(69);
			((HoldStatementContext)_localctx).track = match(INTEGER_LITERAL);
			setState(70);
			match(RPAREN);
			setState(71);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SceneCtrlStatementContext extends ParserRuleContext {
		public Token time;
		public Token type;
		public TerminalNode SCENE_CTRL() { return getToken(AffParser.SCENE_CTRL, 0); }
		public TerminalNode LPAREN() { return getToken(AffParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AffParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AffParser.COMMA, i);
		}
		public TerminalNode FLOAT_LITERAL() { return getToken(AffParser.FLOAT_LITERAL, 0); }
		public List<TerminalNode> INTEGER_LITERAL() { return getTokens(AffParser.INTEGER_LITERAL); }
		public TerminalNode INTEGER_LITERAL(int i) {
			return getToken(AffParser.INTEGER_LITERAL, i);
		}
		public TerminalNode RPAREN() { return getToken(AffParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(AffParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AffParser.IDENTIFIER, 0); }
		public SceneCtrlStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sceneCtrlStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterSceneCtrlStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitSceneCtrlStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitSceneCtrlStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SceneCtrlStatementContext sceneCtrlStatement() throws RecognitionException {
		SceneCtrlStatementContext _localctx = new SceneCtrlStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sceneCtrlStatement);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(SCENE_CTRL);
				setState(74);
				match(LPAREN);
				setState(75);
				((SceneCtrlStatementContext)_localctx).time = match(INTEGER_LITERAL);
				setState(76);
				match(COMMA);
				setState(77);
				((SceneCtrlStatementContext)_localctx).type = match(IDENTIFIER);
				setState(78);
				match(COMMA);
				setState(79);
				match(FLOAT_LITERAL);
				setState(80);
				match(COMMA);
				setState(81);
				match(INTEGER_LITERAL);
				setState(82);
				match(RPAREN);
				setState(83);
				match(SEMICOLON);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(SCENE_CTRL);
				setState(85);
				match(LPAREN);
				setState(86);
				((SceneCtrlStatementContext)_localctx).time = match(INTEGER_LITERAL);
				setState(87);
				match(COMMA);
				setState(88);
				((SceneCtrlStatementContext)_localctx).type = match(IDENTIFIER);
				setState(89);
				match(RPAREN);
				setState(90);
				match(SEMICOLON);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CameraStatementContext extends ParserRuleContext {
		public Token time;
		public Token easing;
		public Token duration;
		public TerminalNode CAMERA() { return getToken(AffParser.CAMERA, 0); }
		public TerminalNode LPAREN() { return getToken(AffParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AffParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AffParser.COMMA, i);
		}
		public List<TerminalNode> FLOAT_LITERAL() { return getTokens(AffParser.FLOAT_LITERAL); }
		public TerminalNode FLOAT_LITERAL(int i) {
			return getToken(AffParser.FLOAT_LITERAL, i);
		}
		public List<TerminalNode> INTEGER_LITERAL() { return getTokens(AffParser.INTEGER_LITERAL); }
		public TerminalNode INTEGER_LITERAL(int i) {
			return getToken(AffParser.INTEGER_LITERAL, i);
		}
		public TerminalNode RPAREN() { return getToken(AffParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(AffParser.SEMICOLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AffParser.IDENTIFIER, 0); }
		public CameraStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cameraStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterCameraStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitCameraStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitCameraStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CameraStatementContext cameraStatement() throws RecognitionException {
		CameraStatementContext _localctx = new CameraStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cameraStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(CAMERA);
			setState(94);
			match(LPAREN);
			setState(95);
			((CameraStatementContext)_localctx).time = match(INTEGER_LITERAL);
			setState(96);
			match(COMMA);
			setState(97);
			match(FLOAT_LITERAL);
			setState(98);
			match(COMMA);
			setState(99);
			match(FLOAT_LITERAL);
			setState(100);
			match(COMMA);
			setState(101);
			match(FLOAT_LITERAL);
			setState(102);
			match(COMMA);
			setState(103);
			match(INTEGER_LITERAL);
			setState(104);
			match(COMMA);
			setState(105);
			match(INTEGER_LITERAL);
			setState(106);
			match(COMMA);
			setState(107);
			match(INTEGER_LITERAL);
			setState(108);
			match(COMMA);
			setState(109);
			((CameraStatementContext)_localctx).easing = match(IDENTIFIER);
			setState(110);
			match(COMMA);
			setState(111);
			((CameraStatementContext)_localctx).duration = match(INTEGER_LITERAL);
			setState(112);
			match(RPAREN);
			setState(113);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimingStatementContext extends ParserRuleContext {
		public Token time;
		public Token bpm;
		public Token beats;
		public TerminalNode TIMING() { return getToken(AffParser.TIMING, 0); }
		public TerminalNode LPAREN() { return getToken(AffParser.LPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AffParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AffParser.COMMA, i);
		}
		public TerminalNode RPAREN() { return getToken(AffParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(AffParser.SEMICOLON, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(AffParser.INTEGER_LITERAL, 0); }
		public List<TerminalNode> FLOAT_LITERAL() { return getTokens(AffParser.FLOAT_LITERAL); }
		public TerminalNode FLOAT_LITERAL(int i) {
			return getToken(AffParser.FLOAT_LITERAL, i);
		}
		public TimingStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timingStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterTimingStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitTimingStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitTimingStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimingStatementContext timingStatement() throws RecognitionException {
		TimingStatementContext _localctx = new TimingStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_timingStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(TIMING);
			setState(116);
			match(LPAREN);
			setState(117);
			((TimingStatementContext)_localctx).time = match(INTEGER_LITERAL);
			setState(118);
			match(COMMA);
			setState(119);
			((TimingStatementContext)_localctx).bpm = match(FLOAT_LITERAL);
			setState(120);
			match(COMMA);
			setState(121);
			((TimingStatementContext)_localctx).beats = match(FLOAT_LITERAL);
			setState(122);
			match(RPAREN);
			setState(123);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimingGroupStatementContext extends ParserRuleContext {
		public TerminalNode TIMING_GROUP() { return getToken(AffParser.TIMING_GROUP, 0); }
		public TerminalNode LPAREN() { return getToken(AffParser.LPAREN, 0); }
		public TimingGroupModifiersContext timingGroupModifiers() {
			return getRuleContext(TimingGroupModifiersContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(AffParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AffParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AffParser.RBRACE, 0); }
		public TerminalNode SEMICOLON() { return getToken(AffParser.SEMICOLON, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TimingGroupStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_timingGroupStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).enterTimingGroupStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AffParserListener ) ((AffParserListener)listener).exitTimingGroupStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AffParserVisitor ) return ((AffParserVisitor<? extends T>)visitor).visitTimingGroupStatement(this);
			else return visitor.visitChildren(this);
		}
	}
